--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Lora:wght@700&family=Merriweather:wght@700&family=Montserrat:wght@700&family=Playfair+Display:wght@700&family=Poppins:wght@700&display=swap');
 @import "tailwindcss";
 
 @theme {
   --font-unbounded: "Unbounded", "sans-serif"; 
+  --font-poppins : "Poppins", "sans-serif";
 }
 
 @layer utilities {
@@ -20,6 +22,9 @@
     @apply w-full;
   }
 }
+
+
+
 
 
 
